# tagio

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  api.js  example.js  package.json  tagio.js  test.js
doc/: basic.md  config.md  flac.md  generic.md  mpeg.md  notes.md
lib/: api.js  flac.js  generic.js  genres.js  index.js  mpeg.js  tagio.js
lib/id3v2/: frames.js  frames.json  genres.js  genres.json  index.js
lib/schemas/: configuration.json  id3v1.json
lib/utils/: scan.js
samples/: sample.avi  sample.flac  sample.mkv  sample.mpeg  sample.txt
src/: apetag.cc  apetag.h  async.cc  async.h  audioproperties.cc  audioproperties.h  base.cc  base.h  bytevector.cc  bytevector.h  configuration.cc  configuration.h  converter.cc  converter.h  flac.cc  flac.h  flacpicture.h  flacpicutre.cc  generic.cc  generic.h  id3v1tag.cc  id3v1tag.h  id3v2frame.cc  id3v2frame.h  id3v2tag.cc  id3v2tag.h  md5.cc  md5.h  mpeg.cc  mpeg.h  tag.cc  tag.h  tagio.cc  tagio.h  util.c  util.h  wrapper.cc  wrapper.h  xiphcomment.cc  xiphcomment.h
src_orig/: apetag.h  base.cc  flacpicutre.cc  generic.cc  generic.h  id3v2frame.h  id3v2tag.cc  id3v2tag.h  mpeg.h  tag.h  wrapper.h
test/: async.js  configuration.js  flac.js  generic.js  index.js  logit.js  mpeg.js  test.js
test/help/: id3v2.js
test/print/: generic.js  id3v2.js  index.js
